--- a/package.json
+++ b/package.json
@@ -11,42 +11,53 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.0",
-    "@editorjs/code": "^2.8.0",
-    "@editorjs/editorjs": "^2.27.2",
-    "@editorjs/header": "^2.7.0",
-    "@editorjs/inline-code": "^1.4.0",
-    "@editorjs/list": "^1.8.0",
-    "@editorjs/nested-list": "^1.3.0",
-    "@editorjs/paragraph": "^2.9.0",
-    "@editorjs/quote": "^2.5.0",
-    "@editorjs/table": "^2.2.2",
-    "@editorjs/underline": "^1.1.0",
     "@monaco-editor/react": "^4.5.1",
-    "@prisma/client": "4.16.1",
-    "@types/node": "20.3.1",
+    "@prisma/client": "4.16.2",
+    "@supabase/supabase-js": "^2.26.0",
+    "@tiptap/core": "^2.0.3",
+    "@tiptap/extension-color": "^2.0.3",
+    "@tiptap/extension-highlight": "^2.0.3",
+    "@tiptap/extension-horizontal-rule": "^2.0.3",
+    "@tiptap/extension-image": "^2.0.3",
+    "@tiptap/extension-link": "^2.0.3",
+    "@tiptap/extension-placeholder": "2.0.3",
+    "@tiptap/extension-task-item": "^2.0.3",
+    "@tiptap/extension-task-list": "^2.0.3",
+    "@tiptap/extension-text-style": "^2.0.3",
+    "@tiptap/extension-underline": "^2.0.3",
+    "@tiptap/pm": "^2.0.3",
+    "@tiptap/react": "^2.0.3",
+    "@tiptap/starter-kit": "^2.0.3",
+    "@tiptap/suggestion": "^2.0.3",
+    "@types/node": "20.3.3",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "editorjs-undo": "^2.0.22",
-    "eslint": "8.43.0",
-    "eslint-config-next": "13.4.7",
+    "eslint": "8.44.0",
+    "eslint-config-next": "13.4.8",
+    "localforage": "^1.10.0",
+    "lucide-react": "^0.258.0",
     "monaco-editor": "^0.39.0",
-    "next": "13.4.7",
+    "next": "13.4.8",
     "next-auth": "^4.22.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-editor-js": "^2.1.0",
-    "react-hook-form": "^7.45.0",
+    "react-hook-form": "^7.45.1",
     "tailwind-merge": "^1.13.2",
     "tailwind-styled-components": "^2.2.0",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.3"
+    "tiptap-markdown": "^0.8.1",
+    "typescript": "5.1.6",
+    "use-debounce": "^9.0.4"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.3.0",
-    "prisma": "^4.16.1"
+    "prisma": "^4.16.2"
   }
 }
