--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "@types/node": "20.3.3",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
+    "@upstash/ratelimit": "^0.4.3",
+    "@vercel/kv": "^0.2.2",
+    "ai": "^2.1.15",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "editorjs-undo": "^2.0.22",
@@ -42,11 +45,13 @@
     "monaco-editor": "^0.39.0",
     "next": "13.4.8",
     "next-auth": "^4.22.1",
+    "openai-edge": "^1.2.0",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-editor-js": "^2.1.0",
     "react-hook-form": "^7.45.1",
+    "sonner": "^0.5.0",
     "tailwind-merge": "^1.13.2",
     "tailwind-styled-components": "^2.2.0",
     "tailwindcss": "3.3.2",
