--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "editorjs-undo": "^2.0.22",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
+    "framer-motion": "^10.12.18",
     "localforage": "^1.10.0",
     "lucide-react": "^0.258.0",
     "monaco-editor": "^0.39.0",
@@ -51,7 +52,9 @@
     "react-dom": "18.2.0",
     "react-editor-js": "^2.1.0",
     "react-hook-form": "^7.45.1",
+    "react-remove-scroll": "^2.5.6",
     "sonner": "^0.5.0",
+    "swr": "^2.2.0",
     "tailwind-merge": "^1.13.2",
     "tailwind-styled-components": "^2.2.0",
     "tailwindcss": "3.3.2",
