--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@tiptap/react": "^2.0.3",
     "@tiptap/starter-kit": "^2.0.3",
     "@tiptap/suggestion": "^2.0.3",
-    "@types/node": "20.3.3",
+    "@types/node": "18.16.19",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "@upstash/ratelimit": "^0.4.3",
@@ -67,6 +67,7 @@
     "encoding": "^0.1.13",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.3.0",
-    "prisma": "^4.16.2"
+    "prisma": "^4.16.2",
+    "supabase": "^1.75.3"
   }
 }
