--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@auth/prisma-adapter": "^1.0.0",
     "@monaco-editor/react": "^4.5.1",
     "@prisma/client": "4.16.2",
+    "@radix-ui/react-accordion": "^1.1.2",
     "@supabase/supabase-js": "^2.26.0",
     "@tiptap/core": "^2.0.3",
     "@tiptap/extension-color": "^2.0.3",
