--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "vercel-build": "prisma generate && prisma migrate deploy && next build"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^1.0.0",
+    "@auth/prisma-adapter": "^1.0.1",
     "@monaco-editor/react": "^4.5.1",
-    "@prisma/client": "4.16.2",
+    "@prisma/client": "5.0.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@supabase/supabase-js": "^2.26.0",
     "@tiptap/core": "^2.0.3",
@@ -37,26 +37,28 @@
     "@upstash/ratelimit": "^0.4.3",
     "@vercel/analytics": "^1.0.1",
     "@vercel/kv": "^0.2.2",
-    "ai": "^2.1.15",
+    "ai": "^2.1.18",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "editorjs-undo": "^2.0.22",
     "eslint": "8.44.0",
-    "eslint-config-next": "13.4.8",
+    "eslint-config-next": "13.4.9",
     "framer-motion": "^10.12.18",
     "localforage": "^1.10.0",
-    "lucide-react": "^0.258.0",
-    "monaco-editor": "^0.39.0",
-    "next": "13.4.8",
+    "lucide-react": "^0.259.0",
+    "monaco-editor": "^0.40.0",
+    "next": "13.4.9",
     "next-auth": "^4.22.1",
+    "next-intl": "3.0.0-beta.8",
     "openai-edge": "^1.2.0",
-    "postcss": "8.4.24",
+    "postcss": "8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-editor-js": "^2.1.0",
     "react-hook-form": "^7.45.1",
     "react-remove-scroll": "^2.5.6",
-    "sonner": "^0.5.0",
+    "server-only": "^0.0.1",
+    "sonner": "^0.6.2",
     "swr": "^2.2.0",
     "tailwind-merge": "^1.13.2",
     "tailwind-styled-components": "^2.2.0",
@@ -68,8 +70,8 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
     "encoding": "^0.1.13",
-    "prettier": "^2.8.8",
-    "prettier-plugin-tailwindcss": "^0.3.0",
-    "prisma": "^4.16.2"
+    "prettier": "^3.0.0",
+    "prettier-plugin-tailwindcss": "^0.4.0",
+    "prisma": "^5.0.0"
   }
 }
