--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@monaco-editor/react": "^4.5.1",
     "@prisma/client": "5.0.0",
     "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-radio-group": "^1.1.3",
     "@supabase/supabase-js": "^2.26.0",
     "@tiptap/core": "^2.0.3",
     "@tiptap/extension-color": "^2.0.3",
