--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "tailwind-merge": "^1.13.2",
     "tailwind-styled-components": "^2.2.0",
     "tailwindcss": "3.3.2",
+    "tippy.js": "^6.3.7",
     "tiptap-markdown": "^0.8.1",
     "typescript": "5.1.6",
     "use-debounce": "^9.0.4"
