style: add scrollbar style

--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "encoding": "^0.1.13",
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.4.0",
-    "prisma": "^5.0.0"
+    "prisma": "^5.0.0",
+    "tailwind-scrollbar": "^3.0.4"
   }
 }
