--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
     "tippy.js": "^6.3.7",
     "tiptap-markdown": "^0.8.1",
     "typescript": "5.1.6",
-    "use-debounce": "^9.0.4"
+    "use-debounce": "^9.0.4",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
