--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "next-intl": "3.0.0-beta.8",
     "openai-edge": "^1.2.0",
     "postcss": "8.4.26",
+    "pretty-bytes": "^6.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-editor-js": "^2.1.0",
