--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.10",
     "framer-motion": "^10.12.21",
+    "highlight.js": "^11.8.0",
     "localforage": "^1.10.0",
     "lucide-react": "^0.260.0",
     "monaco-editor": "^0.40.0",
