--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-dom": "18.2.0",
     "react-editor-js": "^2.1.0",
     "react-hook-form": "^7.45.2",
+    "react-player": "^2.12.0",
     "react-remove-scroll": "^2.5.6",
     "server-only": "^0.0.1",
     "sonner": "^0.6.2",
