--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@monaco-editor/react": "^4.5.1",
     "@prisma/client": "5.0.0",
     "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@radix-ui/react-popover": "^1.0.6",
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.0.6",
     "@supabase/supabase-js": "^2.31.0",
