--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "vercel-build": "prisma generate && prisma migrate deploy && next build"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.1",
     "@monaco-editor/react": "^4.5.2",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "5.2.0",
