--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "next": "13.4.19",
     "next-auth": "^4.23.1",
     "next-intl": "3.0.0-beta.8",
+    "next-mdx-remote": "^4.4.1",
     "openai-edge": "^1.2.2",
     "postcss": "8.4.29",
     "pretty-bytes": "^6.1.1",
